# acrolint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
acrolint/: __init__.py  main.py
tests/: test_basic.py
tests/test_files/: acronyms.tex  main.tex  output.json
