[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrolint"
version = "0.1.0"
description = "A linter for acronyms in text files."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Mitchell Gerrard" } ]
urls = { "Homepage" = "https://github.com/Mitchell-Gerrard/acrolint" }
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
[tool.setuptools]